Реализовано хранение данных с помощью PostgreSQL